Day8, share post was updated

--- a/share-post/index.html
+++ b/share-post/index.html
@@ -4,15 +4,29 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Share Popup</title>
 	<link rel="stylesheet" href="./main.css">
+	<link rel="shortcut icon" href="./img/tag.png" type="image/x-icon">
 </head>
 
 <body>
-	<input type="checkbox" id="popup-1">
+	<label for="popup-1" class="share-button">
+		<img src="./img/share-icon.svg" alt="">
+		Share
+	</label>
+	<input type="checkbox" id="popup-1" class="popup-button">
 
 	<div class="popup">
 		<div class="popup-inner share-popup">
+			<label for="popup-1" class="popup-close">
+				<svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<circle cx="19.5" cy="19.5" r="19.5" fill="#F7F7FC" />
+					<path fill-rule="evenodd" clip-rule="evenodd"
+						d="M20.8212 19.4956L26.7163 13.6006C27.0825 13.2347 27.0825 12.6409 26.7163 12.275C26.35 11.9087 25.7569 11.9087 25.3906 12.275L19.4956 18.17L13.6003 12.275C13.2341 11.9087 12.6409 11.9087 12.2747 12.275C11.9084 12.6409 11.9084 13.2347 12.2747 13.6006L18.17 19.4956L12.2747 25.3906C11.9084 25.7566 11.9084 26.3503 12.2747 26.7162C12.4578 26.8991 12.6978 26.9906 12.9375 26.9906C13.1772 26.9906 13.4172 26.8991 13.6003 26.7159L19.4956 20.8209L25.3906 26.7159C25.5737 26.8991 25.8137 26.9906 26.0534 26.9906C26.2931 26.9906 26.5331 26.8991 26.7163 26.7159C27.0825 26.35 27.0825 25.7562 26.7163 25.3903L20.8212 19.4956Z"
+						fill="#BAB8CD" />
+				</svg>
+				<input type="checkbox" class="popup-button" id="popup-1">
+			</label>
 			<h4>Share this design</h4>
 			<ul>
 				<li>
@@ -48,14 +62,14 @@
 			</ul>
 			<h6>Or copy link</h6>
 			<div class="input">
-				<input type="text" value="https://www.uidesigndaily.com/posts/5d6ab9ea91deae0012006d44">
-				<button>Copy</button>
+				<input type="text" id="input-url" readonly
+					value="https://www.uidesigndaily.com/posts/5d6ab9ea91deae0012006d44">
+				<button onclick="copy('input-url')">Copy</button>
 
 			</div>
 		</div>
 	</div>
-
-	<script src="./app.min.js"></script>
+	<script src="./main.js"></script>
 
 </body>
 
